[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.7", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
pingora = { version = "0.2", features = ["proxy"] }

#[profile.release]
#opt-level = 'z'
#lto = true
#codegen-units = 1
#panic = 'abort'
